testsuite/tests/typecheck/should_fail/T19109.stderr

T19109.hs:6:4: error:
    Illegal visible type application in a pattern: ‘@Int’
      Perhaps you intended to use TypeAbstractions
